--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "chromecast-cli",
-  "version": "0.1.1",
+  "version": "1.0.0-rc.1",
   "description": "Command line interface for Google Chromecast",
   "author": "Erk Struwe <estruwe@estruwe.de>",
   "license": "GPL-3.0",
   "main": "chromecast-cli.js",
   "engines": {
-    "node": "^5.12.0",
-    "npm": "^3.8.6"
+    "node": ">=5.12.0",
+    "npm": ">=3.8.6"
   },
   "preferGlobal": true,
   "bin": {
-    "chromecast": "./chromecast-cli.js"
+    "chromecast-cli": "./chromecast-cli.js"
   },
   "homepage": "https://github.com/erkstruwe/chromecast-cli#readme",
   "repository": {
@@ -23,16 +23,17 @@
   },
   "scripts": {
     "test": "jshint chromecast-cli.js",
-    "start": "node chromecast-cli.js --help"
+    "start": "node chromecast-cli.js",
+    "preversion": "npm test",
+    "postversion": "git push --follow-tags && npm publish"
   },
   "dependencies": {
-    "async": "~2.0.1",
-    "castv2-client": "~1.1.2",
-    "commander": "~2.9.0",
-    "jshint": "~2.9.3",
-    "lodash": "~4.16.2"
+    "async": "~2.6.2",
+    "castv2-client": "~1.2.0",
+    "commander": "~2.19.0",
+    "lodash": "~4.17.11"
   },
   "devDependencies": {
-    "jshint": "~2.9.1"
+    "jshint": "~2.10.1"
   }
 }
