--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "preferGlobal": true,
   "bin": {
-    "chromecast-cli": "./chromecast-cli.js"
+    "chromecast": "./chromecast-cli.js"
   },
   "homepage": "https://github.com/erkstruwe/chromecast-cli#readme",
   "repository": {
@@ -25,7 +25,7 @@
     "test": "jshint chromecast-cli.js",
     "start": "node chromecast-cli.js",
     "preversion": "npm test",
-    "postversion": "git push --follow-tags && npm publish"
+    "postversion": "git push master --follow-tags && npm publish"
   },
   "dependencies": {
     "async": "~2.6.2",
