--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chromecast-cli",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Command line interface for Google Chromecast",
   "author": "Erk Struwe <estruwe@estruwe.de>",
   "license": "GPL-3.0",
@@ -13,7 +13,13 @@
   "bin": {
     "chromecast": "./chromecast-cli.js"
   },
-  "keywords": ["chromecast", "cli", "cast", "stream", "google"],
+  "keywords": [
+    "chromecast",
+    "cli",
+    "cast",
+    "stream",
+    "google"
+  ],
   "homepage": "https://github.com/erkstruwe/chromecast-cli#readme",
   "repository": {
     "type": "git",
